--- a/prod/styleSteph.css
+++ b/prod/styleSteph.css
@@ -6,16 +6,15 @@
 body {
     background-color: lightblue;
 }
+
 header {
     display: flex;
-    background-color: white;
+    background-image: -webkit-linear-gradient(left,magenta,purple,pink);
     padding: 10px;
-    
-    
 }
 
 header > img {
-    height: 90px;
+    height: 120px;
 }
 
 header > ul {
@@ -26,17 +25,24 @@ header > ul {
 header > ul > a {
     margin-left: 90px;
 }
+
 main {
     border: 4px solid yellow;
     border-top: 10px solid yellow;
     min-height: 600px;
     height: 100%;
 }
+
 h1 {
     margin: 20px 40%;
 }
+
 .article {
     margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: white;
 }
 
 footer {
@@ -47,4 +53,18 @@ footer {
 
 .bloc {
     margin: 25px 40%;
+}
+
+.vider {
+    text-decoration: none;
+    
+    
+}
+.vider > p {
+    padding: 10px;
+    margin: 0 40%;
+    border-radius: 10px;
+    border: 2px solid black;
+    background-color: white;
+    
 }
